# Robot

./: .gitignore  README.md  pyproject.toml
assets/scenes/: assets  pick_place.xml  pick_place_blue.xml
configs/: cameras.yaml  world_frame.yaml
data/converters/: expand_instructions.py  merge_datasets.py  sim_to_lerobot.py
data/instructions/: pick_place.txt  pick_place_blue.txt
data/mimicgen_adapter/: __init__.py  augment.py  object_tracker.py  replayer.py  segmenter.py  types.py
docs/: implementation-status.md  lessons-learned-so101-grasp.md
docs/plans/: README.md  alt-platform-genesis.md  alt-platform-isaaclab.md  alt-platform-lerobot-sim.md  alt-platform-maniskill3.md  alt-platform-robocasa-mimicgen.md  phase0-environment-setup.md  phase1-simulation-platform.md  phase2-trajectory-generation.md  phase3-real-demo-sim-augmentation.md  phase4-vla-finetuning.md  phase5-real-deployment.md  phase6-hil-recovery.md  phase7-extensions.md
eval/: audit_dataset.py
sim/collectors/: parallel_runner.py
sim/controllers/: ik.py
sim/envs/: base.py  pick_place.py  pick_place_blue.py
sim/grasp/: antipodal.py
sim/planning/: waypoint.py
sim/randomization/: camera_pose.py  cube_pose.py  lighting.py  plate_pose.py  textures.py
sim/scripted_policies/: pick_place.py  pick_place_blue.py  pick_place_pipeline.py
